force-app/main/default/objects/Account/fields/Contacted_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contacted_for_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted for Renewal</label>
    <type>Checkbox</type>
</CustomField>