force-app/main/default/objects/Account/fields/Contract_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_Months__c</fullName>
    <label>Contract Length (Months)</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>