force-app/main/default/objects/Account/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>IF(ISBLANK(Contract_Expiration_Date__c), &quot;No Contract&quot;,
  IF(Contract_Expiration_Date__c &lt; TODAY(), &quot;Expired&quot;,
    IF(Contract_Expiration_Date__c &lt;= TODAY() + 30, &quot;Expiring Soon&quot;,
      &quot;Active&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>