force-app/main/default/objects/Account/fields/Days_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Expiration__c</fullName>
    <label>Days Until Expiration</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>