force-app/main/default/objects/Account/fields/Last_Risk_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Risk_Assessment_Date__c</fullName>
    <label>Last Risk Assessment Date</label>
    <type>DateTime</type>
</CustomField>