force-app/main/default/objects/Account/fields/Portfolio_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Risk_Score__c</fullName>
    <label>Portfolio Risk Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>