force-app/main/default/objects/Account/fields/Proposed_Renewal_Value__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Renewal_Value__c</fullName>
    <label>Proposed Renewal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>