force-app/main/default/objects/Account/fields/Renewal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notes__c</fullName>
    <label>Renewal Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>