force-app/main/default/objects/Account/fields/Risk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Risk_Threshold__c</fullName>
    <label>Risk Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>